Bug 158139 - Writer, Word Completion does not function
Summary: Writer, Word Completion does not function
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0 target:24.2.1 target:7.6.5
Keywords: bibisectNotNeeded, regression
: 150638 156983 158741 159309 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-11-09 12:33 UTC by bugsdocumentfoundati.alto280
Modified: 2024-03-19 02:16 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot settings word completion (24.28 KB, image/png)
2023-11-12 09:04 UTC, bugsdocumentfoundati.alto280
Details
Screenshot_word_completion (68.96 KB, image/png)
2023-11-13 08:30 UTC, bugsdocumentfoundati.alto280
Details
Auto comp test (344.90 KB, application/vnd.oasis.opendocument.text)
2023-11-14 01:35 UTC, MW
Details
Second auto comp test (347.13 KB, application/vnd.oasis.opendocument.text)
2023-11-14 01:37 UTC, MW
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bugsdocumentfoundati.alto280 2023-11-09 12:33:19 UTC
Description:
In LibreOffice Writer the Word Completion does not function any more. Options are set as described in the WG76-WriterGuide.


Version: 7.6.2.1 (X86_64) / LibreOffice Community
Build ID: 56f7684011345957bbf33a7ee678afaf4d2ba333
CPU threads: 6; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL threaded

Steps to Reproduce:
1.type word
2.
3.

Actual Results:
no word completion is shown

Expected Results:
a word completion is shown


Reproducible: Always


User Profile Reset: Yes

Additional Info:
If Word Completion is enabled, Writer tries to guess which word you are typing and offers to complete the word for you. To accept the suggestion, press Enter. Otherwise, continue typing.
Comment 1 RGB 2023-11-11 22:40:36 UTC
Writer does not keep a list of words, it uses the words it finds in open documents, and only if they are of a minimal length (by default, 8 characters). If you only have an empty document, there will be no word completion suggestion because there are no words to use. The system only works if there is text available, either in the current document or in other documents opened at the same time. Can you check if the system works when text is available (and when that text contains long words)?
Comment 2 bugsdocumentfoundati.alto280 2023-11-12 09:04:56 UTC
Created attachment 190795 [details]
Screenshot settings word completion
Comment 3 bugsdocumentfoundati.alto280 2023-11-12 09:06:12 UTC
Before posting, I checked it with an odt file with which it used in the past. I checked it again now.

Screenshot settings word completion attached.


It worked until a few days ago. It do not know whether a Windows update caused this issue.
Comment 4 RGB 2023-11-12 12:23:28 UTC
I cannot reproduce the problem on Linux (openSUSE Leap 15.5) neither with 7.5.4.1, 7.6.2.1 nor 24.2.0.0.alpha0+

What happens if you start on safe mode (menu Help)?
Comment 5 MW 2023-11-13 01:06:38 UTC
Tried what RGB described on 2023-11-11 22:40:36 UTC with a 129 page document (not that it needed to be that long) and that's it. The document needs words/phrases to autocomplete/suggest. If the intent of the auto complete function was to work without prementioned words then its a bug. If it works based on what's already there in the document then its working as intended. There is limit max entry of words (65536) and a min word length (5). 

Version: 7.6.2.1 (X86_64) / LibreOffice Community
Build ID: 56f7684011345957bbf33a7ee678afaf4d2ba333
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 6 bugsdocumentfoundati.alto280 2023-11-13 08:30:04 UTC
Created attachment 190804 [details]
Screenshot_word_completion

@RGB

Tried it in safe mode. Same result.

Installed:
Version: 24.2.0.0.alpha0+ (x86) / LibreOffice Community
Build ID: 79f92d09ec52f0777fc03ff1d057a11b45e73f6d
CPU threads: 6; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: CL threaded

Word Completion does not work. Here it does not even collect words, screenshot attached.

As it functions with other Windows systems it may be specific to my computer or Windows. Therefore probably not solvable.
Comment 7 MW 2023-11-14 01:35:30 UTC
Created attachment 190822 [details]
Auto comp test

Forgot to add attachment
Comment 8 MW 2023-11-14 01:37:34 UTC
Created attachment 190823 [details]
Second auto comp test

Forgot to add attachment
Comment 9 Madhi 2023-11-18 08:38:11 UTC
Word completion stopped working after a windows update. could be Cumulative Update for .NET Framework 3.5 and 4.8.1 for Windows 11, version 22H2 for x64 (KB5032007) or Cumulative Update for Windows 11 Version 22H2 for x64-based Systems (KB5032190). it was working well before. After the update, it stopped working, even in safe mode. Words are collected as usual.
Comment 10 Madhi 2023-12-03 03:54:56 UTC
As pointed out by other users, when I installed version 7.1.8.1, the problem disappeared. Also, autotext displayed remainder of name as suggestion while typing.
Comment 11 Madhi 2023-12-04 05:11:12 UTC
Safe mode: the problem persists.

Word collection: the words are collected just fine. I have been using it for quite some time and I understand how this works.

How the problem started: on windows, word completion was working fine. I was working on an odt file. After updating windows, the word completion stopped working abruptly, and I could most probably attribute it to a windows update. The fact that word completion works on linux shows that the problem is specific to windows. Other users have experienced the same in this windows build. libreoffice version 7.6.3

Windows update: Cumulative Update for Windows 11 Version 22H2 for x64-based Systems (KB5032190). after that I updated to 23H2 build 22631.2715. the problem persists.

User profile: I reset the user profile and word completion did not work even with a new profile. I reinstalled libreoffice but in vain. word completion does not work anymore after the windows update.

Working solution: as mentioned in a help forum, word completion works in version 7.1.8.1 and not after that verison. I installed version 7.1.8.1 and word completion works in windows build 22631.2715

I hope this information is adequate to resolve this issue. Thanks.
Comment 12 bugsdocumentfoundati.alto280 2023-12-04 08:52:38 UTC
Madhi, thanks for the detailed information and the suggestion to work around the problem with version 7.1.8.1.
As I use version now 7.6.3.2 (X86_64) that seems to be a big step back. Word completion is in my case helpful, but not essential.

By the way do you experience with Windows the same problem in LO Base regarding the window size: https://bugs.documentfoundation.org/show_bug.cgi?id=157065 … the first LibreOffice window is positioned too high, the symbol to change it's size can not be reached and the window can not be moved down. The LibreOffice window was maximized when used last time. …
Comment 13 PawelS 2023-12-13 22:23:22 UTC
It stopped working for me in November too. I use Writer irregularly, so I can't associate it with Windows Update, I think I might notice it after using "check spelling" button.

Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: e19e193f88cd6c0525a17fb7a176ed8e6a3e2aa1
CPU threads: 12; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: en-GB (pl_PL); UI: pl-PL
Calc: CL threaded
Comment 14 Buovjaga 2024-01-16 17:39:44 UTC
For all users affected by this: you might investigate the cause by using our bibisecting repositories:

https://wiki.documentfoundation.org/QA/Bibisect
https://wiki.documentfoundation.org/QA/Bibisect/Windows
https://wiki.documentfoundation.org/QA/Bibisect/Bibisecting_tutorial

As it was said that 7.1 still works, you might start by getting the bibisect repository for 7.2. If the oldest commit works, but the latest commit doesn't, then you can bibisect the problem with the 7.2 repository.
Comment 15 Buovjaga 2024-01-16 17:40:41 UTC
For testers, here is an explanation of the feature: https://books.libreoffice.org/en/WG76/WG7602-TextBasics.html#toc31

(I could not get it to collect words in my quick test, otherwise I would have looked into it)
Comment 16 Buovjaga 2024-01-18 18:11:38 UTC
*** Bug 158741 has been marked as a duplicate of this bug. ***
Comment 17 Buovjaga 2024-01-21 11:50:55 UTC
(In reply to Madhi from comment #9)
> Word completion stopped working after a windows update. could be Cumulative
> Update for .NET Framework 3.5 and 4.8.1 for Windows 11, version 22H2 for x64
> (KB5032007) or Cumulative Update for Windows 11 Version 22H2 for x64-based
> Systems (KB5032190). it was working well before. After the update, it
> stopped working, even in safe mode. Words are collected as usual.

Related to this, bug 156983 comment 10 said:

> In the meantime we detected, that Word Completion is well functioning if
> Windows 11 is cleanly installed.
> So i have a problem with my Win11 Image, that we distributes by our clients.
> Some software component or configuration is blocking a correct working, but
> seem's not a general compatiblity issue related Win11 and Libreoffice.
> We can close the thread, because the problem I have to solve is on my image.
Comment 18 Buovjaga 2024-01-21 11:51:10 UTC
*** Bug 159309 has been marked as a duplicate of this bug. ***
Comment 19 Mike Kaganski 2024-01-21 15:18:41 UTC
Regression after commit 843af72bcc9047867588e29c8e10b84a5e58d70e. Tested that reverting it fixes the problem.

Hence, *likely* Windows-only (unless some other change also broke it elsewhere).
Note that a dictionary for the current language is required, for the collect feature to work.
The words that are misspelled are not added.
Comment 20 Mike Kaganski 2024-01-21 20:22:25 UTC
https://gerrit.libreoffice.org/c/core/+/162350
Comment 21 Commit Notification 2024-01-22 03:06:47 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d49b0c3654e50ff9b74545140e6f19e008009c33

tdf#158139: show autotext / word completion tooltips also for delayed flush

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 Buovjaga 2024-01-22 05:23:10 UTC
*** Bug 156983 has been marked as a duplicate of this bug. ***
Comment 23 Commit Notification 2024-01-22 20:36:34 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/b2fe91897ac4f55bac93aa9f499ed8f29baecd7d

tdf#158139: show autotext / word completion tooltips also for delayed flush

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 24 bugsdocumentfoundati.alto280 2024-01-24 10:05:13 UTC
Thanks to all involved!

Tested with:
LibreOfficeDev_7.6.5.0.0_Win_x86-64.msi 2024-Jan-22 03:42

Version: 7.6.5.0.0+ (X86_64) / LibreOffice Community
Build ID: 2e65401cf50ca25e16a0f3d4b624e2b48c97644c
CPU threads: 6; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL threaded

Word Completion is activated.
New words are collected, stored and visible in the list in Word Completion.

When writing words of this list, no Word Completion.
Same after restarting LibreOfficeDev_7.6.5.0.0_Win_x86-64.msi 2024-Jan-22 03:42

registrymodifications.xcu
LibreOfficeDev_7.6.5.0.0_Win_x86-64.msi 2024-Jan-22 03:42 uses it's own new
C:\Users\x\AppData\Roaming\LibreOfficeDev\4\user\registrymodifications.xcu
Comment 25 Buovjaga 2024-01-24 10:20:19 UTC
(In reply to bugReportLOm from comment #24)
> Thanks to all involved!
> 
> Tested with:
> LibreOfficeDev_7.6.5.0.0_Win_x86-64.msi 2024-Jan-22 03:42

As you can observe from the previous automated commit notifications, the fix should be tested with versions 24.2 or 24.8.
Comment 26 bugsdocumentfoundati.alto280 2024-01-24 14:00:27 UTC
@Buovjaga
Sorry misunderstood:

"It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds"

Thought the patch would be included in all daily builds, not just 24.2.1.
Comment 27 bugsdocumentfoundati.alto280 2024-01-25 05:37:05 UTC
Thanks to all involved and @Buovjaga for the advice!

Problem solved.
Just tried a few words.
When writing Word Completion works.
New words are collected, stored and visible in the list in Word Completion.


Tested with:
LibreOfficeDev_24.2.1.0.0_Win_x86-64.msi 2024-Jan-25 04:12

Version: 24.2.1.0.0+ (X86_64) / LibreOffice Community
Build ID: c36bb3f22a55af0066b0d81a966ef8932d20bf7b
CPU threads: 6; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL threaded
Comment 28 Commit Notification 2024-01-25 10:22:12 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/aa17d771854b9fba24b9beaede6a2cd2291953d4

tdf#158139: show autotext / word completion tooltips also for delayed flush

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 29 HK 2024-01-25 15:22:29 UTC
Other input for Word completion with Libreoffice 7.4 and 7.5 i resolved disinstalling vc++ runtime 2015 on Windows 11 on Windows 10 there was no problem.
Comment 30 Luis Fernandes 2024-02-22 22:23:26 UTC
*** Bug 150638 has been marked as a duplicate of this bug. ***
Comment 31 bugsdocumentfoundati.alto280 2024-03-02 11:46:11 UTC
Word Completion works with 24.2.1.2 and Windows 11.

Thanks to all involved in solving this.


Version: 24.2.1.2 (X86_64) / LibreOffice Community
Build ID: db4def46b0453cc22e2d0305797cf981b68ef5ac
CPU threads: 6; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL threaded
Comment 32 Charmaine9x 2024-03-19 02:16:51 UTC Comment hidden (spam)