tdf#158139: show autotext / word completion tooltips also for delayed flush

The problem was that commit 843af72bcc9047867588e29c8e10b84a5e58d70e (make
win32 variant AnyInput() not deliver events (tdf#140293), 2021-02-11) made
AnyInput ~always return true, when called in SwEditWin::KeyInput. Calling
AnyInput(KEYBOARD) there is to query if there are more pending characters.
But in its new form on Windows, it tells if there are any keyboard-related
window events in the queue, where e.g. WM_KEYUP counts, which is for the
same keypress (WM_KEYDOWN) that is being handled right now - even though
those messages will not produce new characters.

When AnyInput() returns true, a delayed flush timer starts. Only immediate
flush was accompanied by tooltips.

To make sure that the tooltip is shown also for delayed flush, move the
tooltip code into SwEditWin::FlushInBuffer. Store the 'bNormalChar' flag
(which controlled if the tooltip was shown) in a new member in SwEditWin.

Change-Id: I51686b25f8d86df48ae9574ab8f3eb1d0e6ca985
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162350
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit d49b0c3654e50ff9b74545140e6f19e008009c33)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162372
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>